# sail-flight

./: .gitignore  Cargo.toml  DBeaver_Setup_Guide.md  IMPLEMENTATION_SUMMARY.md  README.md  SAIL_INTEGRATION_TEMPLATE.md  build.rs
src/: config.rs  connect.rs  executor.rs  generated.rs  main.rs  schema.rs  spark.rs
test/: TestConnection.java  test_connection.py  test_connection.sh
test/java-test/: Makefile  README.md  pom.xml  run-test.sh
test/java-test/src/main/java/com/sail/flight/test/: SailFlightSqlTest.java  SimpleTest.java
