[package]
name = "sail"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-flight = "55.2.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.31"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13.5"

